# wode

./: .gitignore  .nycrc  mat3ra-wode-0.0.0.tgz  package-lock.json  package.json  pyproject.toml  tsconfig-transpile.json  tsconfig.json
.cursor/rules/: context-provider-data-layers.mdc
scripts/: generate-mixins.ts
src/js/: ExecutionUnitInput.ts  RuntimeItemsUILogicMixin.ts  Subworkflow.ts  Workflow.ts  enums.ts  index.js  index.ts
src/js/context/: providers.ts
src/js/context/mixins/: ApplicationContextMixin.ts  JobContextMixin.ts  (+7 more)
src/js/convergence/: ConvergenceParameter.ts  NonUniformKGridConvergence.ts  UniformKGridConvergence.ts  factory.ts
src/js/subworkflows/: subworkflow.js  subworkflow.ts
src/js/units/: AssertionUnit.ts  AssignmentUnit.ts  BaseUnit.ts  ConditionUnit.ts  ErrorUnit.ts  ExecutionUnit.ts  ExecutionUnitInput.ts  IOUnit.ts  MapUnit.ts  ProcessingUnit.ts  ReduceUnit.ts  SubworkflowUnit.ts  factory.ts  index.ts
src/js/utils/: baseUnits.ts  index.ts  repair.ts  subworkflow.ts  units.ts  workflow.ts
src/js/workflows/: default.ts  types.ts
src/units/: assertion.ts  assignment.ts  base.ts  condition.ts  execution.ts  factory.ts  io.ts  map.ts  processing.ts  reduce.ts  subworkflow.ts  types.ts
src/units/builders/: AssertionUnitConfigBuilder.ts  AssignmentUnitConfigBuilder.ts  ExecutionUnitConfigBuilder.ts  IOUnitConfigBuilder.ts  UnitConfigBuilder.ts
tests/fixtures/: workflow_hashes.json
tests/js/: Subworkflow.convergenceSeries.test.ts  Workflow.test.ts  assertNotNull.ts  executionUnit.contextProviders.test.ts  kpath.vaspBands.test.ts  pointsGridFormDataProvider.test.ts  qepwxInputDataManager.labeledElements.test.ts  renderContext.test.ts  repair.test.ts  subworkflow.standata.integration.test.ts  unitFactory.test.ts  workflow.test.js
tests/py/: test_convergence.py  test_subworkflow.py  test_unit.py  test_workflow.py
tests/py/context/: test_planewave_cutoffs_context_provider.py  test_points_grid_data_provider.py  test_points_path_data_provider.py
tests/py/fixtures/: __init__.py
tests/py/units/: test_execution_unit.py
types/: periodic-table.d.ts
(+80 files in other folders)
