[project]
name = "mat3ra-wode"
dynamic = ["version"]
description = "WOrkflow DEfinitions"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
    { name = "Exabyte Inc.", email = "info@mat3ra.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
]
dependencies = [
    "numpy",
    "mat3ra-code",
    "mat3ra-utils @ git+https://github.com/Exabyte-io/utils.git@5f17ac3e7ab242f2c387b5691c8d8cacc6d59f3f",
    "mat3ra-esse",
    "mat3ra-mode",
    "mat3ra-ade @ git+https://github.com/Exabyte-io/ade.git@9ef73f59d2099cda4426011ed1f31891ee19b68c",
    "mat3ra-made",
    "mat3ra-standata"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "isort",
    "mypy",
    "pip-tools",
]
tests = [
    "coverage[toml]>=5.3",
    "pytest",
    "pytest-cov",
]
all = [
    "mat3ra-wode[tests]",
    "mat3ra-wode[dev]",
]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools-scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command = "git describe --tags --long"

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = '''
(
    tests\/fixtures*,
    examples\/.*\/.*\.py
  | other\/.*\/.*\.(py|ipynb)
  | dist\/.*
)
'''

[tool.ruff]
extend-exclude = [
    "src/js",
    "tests/fixtures",
    "dist"
]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
extend_skip_glob = ["dist/*"]

[tool.pytest.ini_options]
pythonpath = [
    "src/py",
]
testpaths = [
    "tests/py"
]
